# cabl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  arduinify.sh  clean-build.sh  contributors.txt  requirements.txt  venv.sh
cmake/: FindLibUSB.cmake  FindRtMidi.cmake  colors.cmake  sl-ext-libs.cmake  sl-functions.cmake  sl-main.cmake
cmake-modules/: FindCairo.cmake  FindHIDAPI.cmake  FindLibUSB.cmake  FindLibUSB_.cmake  FindRtMidi.cmake  Findhidapi.cmake  Findlibusb.cmake  Findnanomsg.cmake  clang-tools.cmake  colors.cmake  sl-compiler.cmake  sl-ext-libs.cmake  sl-functions.cmake  sl-main.cmake
examples/: CMakeLists.txt
examples/DeviceTest/: CMakeLists.txt  DeviceTest.cpp  DeviceTest.h
examples/colordisplay/: CMakeLists.txt  ColorDisplay.cpp  ColorDisplay.h  DisplayClient.cpp  DisplayClient.h  main.cpp
examples/device-test/: CMakeLists.txt  DeviceTest.cpp  main.cpp
examples/euklid/: CMakeLists.txt  Euklid.cpp  Euklid.h  Sequence.h  bjorklund.h  main.cpp
examples/evklid/: Evklid.cpp  Evklid.h  main.cpp
inc/: Application.h  Device.h  Macros.h  Types.h  cabl-config.h.in  cabl.h  k-IO.h  k-IO2.h  k-io-config.h.in  k-io.h  version.h.in
inc/app/: Application.h  ClientSingle.h
inc/cabl/: cabl-config.h.in  cabl.h
inc/cabl/client/: Client.h
inc/cabl/comm/: DeviceHandle.h  DiscoveryPolicy.h  Driver.h  Transfer.h
inc/cabl/devices/: Coordinator.h  Device.h  DeviceFactory.h  DeviceRegistrar.h
inc/cabl/gfx/: Canvas.h  CanvasBase.h  DynamicCanvas.h  Font.h  FontManager.h  LedArray.h  LedMatrix.h  TextDisplay.h
inc/cabl/util/: Color.h  Functions.h  Log.h  Macros.h  Types.h  Version.h
inc/client/: Client.h
inc/comm/: DeviceDescriptor.h  DeviceHandle.h  DiscoveryPolicy.h  Driver.h  Transfer.h
inc/devices/: Coordinator.h  Device.h  DeviceFactory.h  DeviceKompleteKontrol.h  DeviceMaschineMK1.h  DeviceMaschineMK2.h  DeviceMaschineMikroMK1.h  DeviceMaschineMikroMK2.h  DeviceRegistrar.h  DeviceTraktorF1MK2.h  Devices.h  DiscoveryPolicy.h
inc/devices/ableton/: Push.h  Push2.h
inc/devices/akai/: Push.h
inc/devices/generic/: USBMidi.h
inc/devices/ni/: KompleteKontrol.h  MaschineMK1.h  MaschineMK2.h  MaschineMikroMK1.h  MaschineMikroMK2.h  TraktorF1MK2.h
inc/gfx/: Canvas.h  CanvasBase.h  DrawingContext.h  DynamicCanvas.h  Font.h  FontManager.h  GDisplay.h  LCDDisplay.h  LedArray.h  LedMatrix.h  TextDisplay.h
inc/gfx/displays/: GDisplayDummy.h  GDisplayMaschineMK1.h  GDisplayMaschineMK2.h  GDisplayMaschineMikro.h  LCDDisplay7Segments.h  LCDDisplayGeneric.h  LCDDisplayKompleteKontrol.h
inc/midi/: MidiMessage.h  MidiMessage.hpp
inc/util/: CircularBuffer.h  CircularBuffer_SL.h  ColorRGB.h  Exception.h  Functions.h  LedColor.h  Log.h  Macros.h  MidiMessage.h  RGBColor.h  ScopedPointer_SL.h  Types.h  Version.h  Version_SL.h
src/: Application.cpp  Device.cpp  cabl.cpp  k-io.cpp
src/app/: Application.cpp  ClientSingle.cpp
src/client/: Client.cpp
src/comm/: DeviceHandle.cpp  DeviceHandleImpl.h  DiscoveryPolicy.cpp  Driver.cpp  DriverImpl.h  Transfer.cpp
src/comm/drivers/: DriverHIDAPI.cpp  DriverHIDAPI.h  DriverLIBUSB.cpp  DriverLIBUSB.h  DriverMAX3421E.cpp  DriverMAX3421E.h  DriverMOCK.cpp  DriverMOCK.h  DriverSAM3X8E.cpp  DriverSAM3X8E.h
src/comm/drivers/HIDAPI/: DeviceHandleHIDAPI.cpp  DeviceHandleHIDAPI.h  (+2 more)
src/devices/: Coordinator.cpp  Device.cpp  DeviceFactory.cpp  DeviceKompleteKontrol.cpp  DeviceMaschineMK1.cpp  DeviceMaschineMK2.cpp  DeviceMaschineMikroMK2.cpp  DeviceTraktorF1MK2.cpp  Devices.cpp  DiscoveryPolicy.cpp
src/devices/ableton/: Push.cpp  Push2.cpp  Push2.h  Push2Display.cpp  Push2Display.h
src/devices/akai/: Push.cpp  Push.h
src/devices/generic/: USBMidi.cpp  USBMidi.h
src/devices/ni/: KompleteKontrol.cpp  KompleteKontrol.h  MaschineJam.cpp  MaschineJam.h  MaschineJamHelper.cpp  MaschineJamHelper.h  MaschineMK1.cpp  MaschineMK1.h  MaschineMK2.cpp  MaschineMK2.h  MaschineMikroMK1.cpp  MaschineMikroMK1.h  MaschineMikroMK2.cpp  MaschineMikroMK2.h  TraktorF1MK2.cpp  TraktorF1MK2.h
src/devices/special/: DeviceProxy.cpp  DeviceProxy.h
src/gfx/: Canvas.cpp  FontManager.cpp  GDisplay.cpp  LedArrayDummy.h  LedArrayMaschineJam.h
src/gfx/displays/: GDisplayDummy.h  GDisplayMaschineMK1.cpp  GDisplayMaschineMK1.h  GDisplayMaschineMK2.cpp  GDisplayMaschineMK2.h  GDisplayMaschineMikro.cpp  GDisplayMaschineMikro.h  GDisplayPush2.cpp  GDisplayPush2.h  LCDDisplay7Segments.cpp  LCDDisplay7Segments.h  LCDDisplayGeneric.cpp  LCDDisplayGeneric.h  LCDDisplayKompleteKontrol.cpp  LCDDisplayKompleteKontrol.h  LedArrayDummy.h  LedArrayMaschineJam.h  LedMatrixMaschineJam.cpp  LedMatrixMaschineJam.h  NullCanvas.h  TextDisplay7Segments.h  TextDisplayGeneric.h  TextDisplayKompleteKontrol.cpp  TextDisplayKompleteKontrol.h
src/gfx/fonts/: FontBig.h  FontNormal.h  FontSmall.h
src/py/: PyClient.cpp  PyClient.h  pyCabl.cpp
src/util/: CircularBuffer.cpp  CircularBuffer_SL.cpp  Color.cpp  ColorRGB.cpp  Functions.cpp  Functions_SL.cpp  Version.cpp  Version_SL.cpp
support/: 16-seg.html  7-seg.html
support/arduino/: cabl.h  k-IO.h  library.properties.in  stl-arduino.h
support/doxygen/: Doxyfile.in  character-designer.html  doxy-boot.js  footer.html  header.html
support/python/: cabl.py  pyCabl.py
support/travis/: deploy-bintray.json.in
support/windows/cmake/: GenerateProductVersion.cmake  VersionInfo.in  VersionResource.rc
test/: CMakeLists.txt  main.cpp
test/comm/: DeviceDescriptor.cpp  DiscoveryPolicy.cpp  Transfer.cpp
test/gfx/: Canvas.cpp  CanvasTestFunctions.cpp  CanvasTestFunctions.h  CanvasTestHelper.h  CanvasTestHelpers.cpp  CanvasTestHelpers.h
test/gfx/displays/: GDisplayDummy.cpp  GDisplayMaschineMK1.cpp  GDisplayMaschineMK2.cpp  GDisplayMaschineMikro.cpp  GDisplayPush2.cpp  LCDDisplay7Segments.cpp  LCDDisplayGeneric.cpp  LCDDisplayKompleteKontrol.cpp  NullCanvas.cpp  TextDisplay7Segments.cpp  TextDisplayGeneric.cpp  TextDisplayKompleteKontrol.cpp
test/midi/: MidiMessage.cpp
test/util/: Color.cpp  ColorRGB.cpp  MidiMessage.cpp  Version.cpp
(+29 files in other folders)
